Revision history for {{$dist->name}}},

{{$NEXT}}

0.02      2022-12-27 18:11:28-05:00 America/New_York
  - Fix missing $VERSION.
  - Patch header on macOS when building from source.

0.01      2022-03-21 20:08:49-04:00 America/New_York
  - initial version