@@ -45,9 +45,9 @@ sub exe {
 
 =head1 HELPERS
 
-=head2 7z
+=head2 sevenzip
 
- %{7z}
+ %{sevenzip}
 
 Returns '7z', '7zz', or appropriate command for
 platform.
@@ -56,7 +56,7 @@ platform.
 
 sub alien_helper {
   return +{
-    '7z' => sub {
+    'sevenzip' => sub {
       Alien::7zip->exe;
     },
   };
